Vertical label alignment fixes #4611 (#4611#issuecomment-123721294)

--- a/app/assets/stylesheets/common/form-content.css.scss
+++ b/app/assets/stylesheets/common/form-content.css.scss
@@ -101,6 +101,9 @@ $sLabel-width: 140px;
   @include nicer-lato-typography();
   color: $cTypography-paragraphs;
 }
+.Form-label.Form-label--verticalAlignTop {
+  line-height: inherit;
+}
 .Form-label--multipleLines { line-height: 20px }
 .Form-label.Form-label--large { font-size: $sFontSize-large }
 .Form-label.Form-label--step { @include flex-grow(1) }
